[B] Fix name wrap in vertical list meta
Fixes #973

--- a/client/src/theme/Components/backend/_vertical-list.scss
+++ b/client/src/theme/Components/backend/_vertical-list.scss
@@ -221,7 +221,6 @@
       display: flex;
       flex-flow: column;
       flex-grow: 1;
-      max-width: calc(100% - 50px);
       padding-right: 20px;
       vertical-align: top;
     }
